--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,8 @@
 # Site settings
 title: StoneAge Waterblast Tools
 email: margaret.babiarz@stoneagetools.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description:  # this means to ignore newlines until "baseurl:"
+  Manufacturing high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
 baseurl: "" #  the subpath of your site, e.g. /blog
 url: "http://stoneagetools.com" # the base hostname & protocol for your site
 #twitter_username: ghostweasel
