add WHR Switcher

--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ ErrorDocument 404 /404.html
 
 Redirect 301 /prodrive /abx-pro
 Redirect 301 /hydro-x /rotary-hydro-x
+Redirect 301 /switcher /wgr-switcher
