--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,6 @@ IndexIgnore *
 ErrorDocument 404 /404.html
 
 Redirect 301 /prodrive /abx-pro
+Redirect 301 /autopack-pro http://info.stoneagetools.com/autopack-pro
 Redirect 301 /hydro-x /rotary-hydro-x
 Redirect 301 /switcher /wgr-switcher
