--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,5 @@ Redirect 301 /prodrive /abx-pro
 Redirect 301 /autopack-pro http://info.stoneagetools.com/autopack-pro
 Redirect 301 /hydro-x /rotary-hydro-x
 Redirect 301 /switcher /wgr-switcher
+Redirect 301 /rotary-swivels /waterblast-tools-automated-equipment
+Redirect 301 /news http://news.stoneagetools.com/
