--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,12 @@ IndexIgnore *
 # show custom error pages for these HTTP statuses
 ErrorDocument 404 /404.html
 
+Redirect 301 /careers /jobs
 Redirect 301 /prodrive /abx-pro
 Redirect 301 /autopack http://info.stoneagetools.com/autopack
 Redirect 301 /hydro-x /rotary-hydro-x
 Redirect 301 /switcher /wgr-switcher
 Redirect 301 /rotary-swivels /waterblast-tools-automated-equipment
 Redirect 301 /news http://news.stoneagetools.com/
+
+Redirect 302 /rotary-hydro-x /fixed-hydro-x
