--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+# protect .htaccess
+<Files ~ "^.*\.([Hh][Tt][Aa])">
+	Order allow,deny
+	Deny from all
+	Satisfy all
+</Files>
+
 # turn off directory browsing
 IndexIgnore *
 
