--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: StoneAge Waterblast Tools
 email: margaret.babiarz@stoneagetools.com
 description:  # this means to ignore newlines until "baseurl:"
   Manufacturing high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
-baseurl: "" #  the subpath of your site, e.g. /blog
-url: "http://stoneagetools.com" # the base hostname & protocol for your site
+# baseurl: "" #  the subpath of your site, e.g. /blog
+url: "https://www.stoneagetools.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
