stoneage solutions name change

--- a/.htaccess
+++ b/.htaccess
@@ -22,5 +22,6 @@ Redirect 301 /hydro-x /rotary-hydro-x
 Redirect 301 /switcher /wgr-switcher
 Redirect 301 /rotary-swivels /waterblast-tools-automated-equipment
 Redirect 301 /news http://news.stoneagetools.com/
+Redirect 301 /custom-solutions /solutions
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
