--- a/.htaccess
+++ b/.htaccess
@@ -24,5 +24,6 @@ Redirect 301 /rotary-swivels /waterblast-tools-automated-equipment
 Redirect 301 /news http://news.stoneagetools.com/
 Redirect 301 /custom-solutions /solutions
 Redirect 301 /blackhawk https://news.stoneagetools.com/tool-obsolescence-bhk-100
+Redirect 301 /yellow-jacket https://www.stoneagetools.com/assets/pdf/reference/legacy/Obsolete_JKT.pdf
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
