--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
+Options +MultiViews
 RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteRule ^(.*)$ https://stoneagetools.com [L,R=301]
 
 # protect .htaccess
 <Files ~ "^.*\.([Hh][Tt][Aa])">
