add one stop shop and .htaccess redirect fix

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
-Options +MultiViews
 RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://stoneagetools.com [L,R=301]
+RewriteRule ^(.*)$ https://stoneagetools.com/$1 [L,R=301]
+
+Options +MultiViews
 
 # protect .htaccess
 <Files ~ "^.*\.([Hh][Tt][Aa])">
@@ -18,14 +19,12 @@ ErrorDocument 404 /404.html
 
 Redirect 301 /careers /jobs
 Redirect 301 /prodrive /abx-pro
-Redirect 301 /autopack http://info.stoneagetools.com/autopack
 Redirect 301 /hydro-x /rotary-hydro-x
 Redirect 301 /switcher /wgr-switcher
 Redirect 301 /rotary-swivels /waterblast-tools-automated-equipment
-Redirect 301 /news http://news.stoneagetools.com/
+Redirect 301 /news https://news.stoneagetools.com
 Redirect 301 /custom-solutions /solutions
-Redirect 301 /blackhawk https://news.stoneagetools.com/tool-obsolescence-bhk-100
-Redirect 301 /yellow-jacket https://www.stoneagetools.com/assets/pdf/reference/legacy/Obsolete_JKT.pdf
+Redirect 301 /one-stop-shop https://info.stoneagetools.com/one-stop-shop
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
 Redirect 302 /warthog-dealers https://www.stoneagetools.com/contact#sewer-tab
