--- a/.htaccess
+++ b/.htaccess
@@ -48,7 +48,7 @@ Redirect 301 /whr-switcher https://www.warthog-nozzles.com/whr-magnum/
 Redirect 301 /ws https://www.warthog-nozzles.com/ws-classic/
 Redirect 301 /wt https://www.warthog-nozzles.com/wt-classic/
 Redirect 301 /wv https://www.warthog-nozzles.com/wv-classic/
-Redirect 301 /sentinel-now /sentinel-lp/sentinel.html
+Redirect 301 /sentinel /sentinel-lp/sentinel.html
 Redirect 301 /abxs-3l /sentinel-virtual-overview/abxs-3l.html
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
