--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: StoneAge Waterblast Tools
+title: StoneAge Waterblast Tools – WATERBLAST EQUIPMENT FOR INDUSTRIAL CLEANING
 email: margaret.babiarz@stoneagetools.com
 description:  # this means to ignore newlines until "baseurl:"
-  Manufacturing high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
+  StoneAge, Inc. manufactures high-pressure waterblast tools and automated equipment for industrial cleaning applications. Our products have been an industry standard for over 40 years and we continue to lead the way with tools that advance productivity and hands-free automated equipment that ensures you complete your waterblasting jobs safely, easily, on time, and on budget.
+image: image: /assets/img/sliders/abx-2l-operator.jpg
 # baseurl: "" #  the subpath of your site, e.g. /blog
 url: "https://www.stoneagetools.com" # the base hostname & protocol for your site
 
