ABXS-3L and LWPS multi-file updates

--- a/.htaccess
+++ b/.htaccess
@@ -51,5 +51,9 @@ Redirect 301 /wv https://www.warthog-nozzles.com/wv-classic/
 Redirect 301 /sentinel /sentinel-lp/sentinel.html
 Redirect 301 /abxs-3l /sentinel-virtual-overview/abxs-3l.html
 Redirect 301 /sentinel-success /sentinel-win/resources.html
+Redirect 301 /abx-3l /autobox-3l
+Redirect 301 /abx-2l /autobox-2l
+Redirect 301 /autopack-2l-b /autopack-2l
+
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
