misc updates, including Sentinel htaccess redirect fix

--- a/.htaccess
+++ b/.htaccess
@@ -48,6 +48,7 @@ Redirect 301 /whr-switcher https://www.warthog-nozzles.com/whr-magnum/
 Redirect 301 /ws https://www.warthog-nozzles.com/ws-classic/
 Redirect 301 /wt https://www.warthog-nozzles.com/wt-classic/
 Redirect 301 /wv https://www.warthog-nozzles.com/wv-classic/
+Redirect 301 /sentinel_2020 /sentinel-lp/sentinel.html
 Redirect 301 /sentinel /sentinel-lp/sentinel.html
 Redirect 301 /abxs-3l /sentinel-virtual-overview/abxs-3l.html
 Redirect 301 /sentinel-success /sentinel-win/resources.html
