HMS, IFAT, misc updates

--- a/.htaccess
+++ b/.htaccess
@@ -61,6 +61,7 @@ Redirect 301 /propositioner /compass
 Redirect 301 /compassinfo /compass
 Redirect 301 /sentinel-availability /sentinel-available/for2022.html
 Redirect 301 /ifat22 /ifat-2022/what-language.html
+Redirect 301 /hose-containment /hms
 
 
 Redirect 302 /rotary-hydro-x /fixed-hydro-x
